--- a/gb/19/9/18/n11529859.md
+++ b/gb/19/9/18/n11529859.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aporpf356/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aporpf356/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aporpf356/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aporpf356/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aporpf356/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aporpf356/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aporpf356/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aporpf356/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aporpf356/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aporpf356/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aporpf356/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aporpf356/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aporpf356/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aporpf356/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aporpf356/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aporpf356/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/aporpf356/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/aporpf356/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/aporpf356/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/aporpf356/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aporpf356/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/aporpf356/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aporpf356/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aporpf356/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>穆斯林旅游排名 蔡英文：台湾今年全球第3</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年09月18日讯】（大纪元记者吴旻洲<ahref="https://github.com/aporpf356/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>台北报导）中华民国总统<ahref="https://github.com/aporpf356/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>18日接见回教朝觐团，她致词时表示，政府致力打造<ahref="https://github.com/aporpf356/djy/blob/master/gb/tag/%E7%A9%86%E6%96%AF%E6%9E%97.md#1">穆斯林</a>友善环境，推动清真食品认证及清真餐厅认证，全球穆斯林<ahref="https://github.com/aporpf356/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8.md#1">旅游</a>指数排名，<ahref="https://github.com/aporpf356/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>今年首度进入前3名，这是推动新南向政策以来最好的成绩，未来政府会继续努力，深化台湾与穆斯林的友谊。</p>
-<p><ahref="https://github.com/aporpf356/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>表示，伊斯兰教是世界上最具影响力的宗教之一，尤其是伊斯兰的教义当中，非常推崇和平及正义，尤其是也认为对贫弱、困苦的群体要有更多照顾。这些教义和观念对于整体社会来说，有非常良善的影响。</p>
-<p>她表示，她上任以来推行的新南向政策当中，<ahref="https://github.com/aporpf356/djy/blob/master/gb/tag/%E7%A9%86%E6%96%AF%E6%9E%97.md#1">穆斯林</a>一直是非常重要的伙伴。为了加深和穆斯林在观光、贸易、文化等等各方面的互动，要深刻了解和认识穆斯林的文化和生活习俗，是政府非常重要的任务。</p>
+<p>【大纪元2019年09月18日讯】（大纪元记者吴旻洲<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>台北报导）中华民国总统<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>18日接见回教朝觐团，她致词时表示，政府致力打造<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A9%86%E6%96%AF%E6%9E%97.md#1">穆斯林</a>友善环境，推动清真食品认证及清真餐厅认证，全球穆斯林<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8.md#1">旅游</a>指数排名，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>今年首度进入前3名，这是推动新南向政策以来最好的成绩，未来政府会继续努力，深化台湾与穆斯林的友谊。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>表示，伊斯兰教是世界上最具影响力的宗教之一，尤其是伊斯兰的教义当中，非常推崇和平及正义，尤其是也认为对贫弱、困苦的群体要有更多照顾。这些教义和观念对于整体社会来说，有非常良善的影响。</p>
+<p>她表示，她上任以来推行的新南向政策当中，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A9%86%E6%96%AF%E6%9E%97.md#1">穆斯林</a>一直是非常重要的伙伴。为了加深和穆斯林在观光、贸易、文化等等各方面的互动，要深刻了解和认识穆斯林的文化和生活习俗，是政府非常重要的任务。</p>
 <p>她说，政府也致力打造穆斯林友善的环境，希望更多穆斯林朋友来到台湾，有宾至如归的感觉。现在在机场、在车站，还有很多重要景点，例如日月潭、阿里山，还有故宫北院，都已经设有穆斯林祈祷室，方便穆斯林朋友进行每日功课。</p>
-<p>蔡英文表示，目前政府推动的清真食品认证及清真餐厅认证，已经获得200多家餐厅的响应。未来也会继续协助业者了解清真产业，取得清真认证，加强我们和穆斯林世界的往来。今年9月开始，也已经有“清真产品贩卖机”开始上路，里面提供的饮料零食和商品，也都有获得清真认证，就是希望为穆斯林朋友，提供更便利友善的<ahref="https://github.com/aporpf356/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8.md#1">旅游</a>和生活环境。</p>
+<p>蔡英文表示，目前政府推动的清真食品认证及清真餐厅认证，已经获得200多家餐厅的响应。未来也会继续协助业者了解清真产业，取得清真认证，加强我们和穆斯林世界的往来。今年9月开始，也已经有“清真产品贩卖机”开始上路，里面提供的饮料零食和商品，也都有获得清真认证，就是希望为穆斯林朋友，提供更便利友善的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8.md#1">旅游</a>和生活环境。</p>
 <p>她强调，政府的这些努力也反映在国际评比中。根据“全球穆斯林旅游指数”排名，台湾从过去的第7名、第5名，今年更进一步荣获非穆斯林国家中的第3名，这也是第一次进到前3名。这是推动新南向政策以来最好的成绩，也显示我们对于穆斯林朋友的用心，逐渐受到肯定。</p>
 <p>责任编辑：玉珍</p>
 
@@ -17,42 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/19/6/5/n11302206.md#1">花莲办穆斯林开斋节 伊斯兰庆典信众盛装庆贺</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/19/6/26/n11346389.md#1">桃竹竹苗穆斯林友善旅游环境联盟 抢旅游市场</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/19/7/19/n11395639.md#1">穆斯林市场大 台商研院吁考取清真执照</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/19/8/15/n11455007.md#1">云嘉南穆斯林友善旅游  环境建构初成喜迎客</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/19/8/27/n11480709.md#1">宜兰2例屈公病确诊 曾赴缅甸探亲旅游</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/19/8/27/n11481092.md#1">日本鸟取县来信通知旅游补助 外交部：假的！</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/19/8/31/n11490041.md#1">香港情势恶化与否 蔡英文：领导人一念之间</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/19/9/17/n11526414.md#1">“神韵交响乐团来了” 台湾粉丝热情接机</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/19/9/17/n11527424.md#1">【世界十字路口】郭台铭为何弃选台湾总统</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/19/9/17/n11527486.md#1">马指蔡英文断交总统 府驳：为中共助威</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/6/5/n11302206.md#1">花莲办穆斯林开斋节 伊斯兰庆典信众盛装庆贺</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/6/26/n11346389.md#1">桃竹竹苗穆斯林友善旅游环境联盟 抢旅游市场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/7/19/n11395639.md#1">穆斯林市场大 台商研院吁考取清真执照</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/15/n11455007.md#1">云嘉南穆斯林友善旅游 环境建构初成喜迎客</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/27/n11480709.md#1">宜兰2例屈公病确诊 曾赴缅甸探亲旅游</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/27/n11481092.md#1">日本鸟取县来信通知旅游补助 外交部：假的！</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/31/n11490041.md#1">香港情势恶化与否 蔡英文：领导人一念之间</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/17/n11526414.md#1">“神韵交响乐团来了” 台湾粉丝热情接机</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/17/n11527424.md#1">【世界十字路口】郭台铭为何弃选台湾总统</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/17/n11527486.md#1">马指蔡英文断交总统 府驳：为中共助威</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/17/n11874645.md#1" target="_blank">王友群：习近平的父亲被栽赃陷害16年</a></li><li><a href="https://github.com/aporpf356/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285391.md#1" target="_blank">没有题海和补课 女儿考上名牌大学</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/25/n11000789.md#1" target="_blank">共产暴政录：消灭思想先驱的“一打三反”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285941.md#1" target="_blank">美议员颁发国会特别褒奖 感谢法轮大法</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/20/7/10/n12247399.md#1">香港女科学家冒险出逃 曝中共瞒疫惊人真相</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/20/7/9/n12245131.md#1">【新闻看点】川普连出重手 习近平再设安全组？</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/20/7/10/n12247428.md#1">贵州公交坠湖内幕曝光 文章遭当局封杀</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/20/7/10/n12247894.md#1">歙县洪灾 一茶企损失九千万元 厂主失声痛哭</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/20/7/10/n12247389.md#1">【新闻看点】美组全球反共联盟 王毅变脸求和？</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/20/7/9/n12245108.md#1">美籍富商丈夫惊爆破产 港女星叶玉卿回应</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/20/7/8/n12242228.md#1">邓紫棋拿麦克风飙高音 罩中的玻璃杯瞬间炸裂</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/20/7/10/n12245982.md#1">憔悴仍坚强抗癌 余苑绮术后近照曝光</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/20/7/9/n12244929.md#1">孙俪久违留起长发 6岁女儿同学惊呼认不出</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/20/7/8/n12242471.md#1">外卖纸袋破洞泄热奶茶 怀二胎安以轩被烫伤</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/20/7/5/n12233581.md#1">天人感应现象 奇石空山叫 神石藏字</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/14/4/16/n4133274.md#1">米开朗基罗（12）《最后的审判》（下）</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/20/5/28/n12143788.md#1">【康熙大帝】靳辅治河与康熙南巡</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/8/12/17/n2365636.md#1">齐桓公与佞臣</a></li>
-<li><a href="https://github.com/aporpf356/djy/blob/master/gb/20/6/5/n12163903.md#1">【命理】三奇贵格 为何落难坠马？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/aporpf356/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/aporpf356/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/18/n11529859.htm">穆斯林旅游排名 蔡英文：台湾今年全球第3</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/18/n11529859.htm">穆斯林旅游排名 蔡英文：台湾今年全球第3</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aporpf356/djy/blob/master/gb/19/9/18/n11529859.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aporpf356/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aporpf356/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aporpf356/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aporpf356/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aporpf356/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/9/18/n11529859.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
